Bug 167214 - PPTX with failed embedded fonts crashes on save
Summary: PPTX with failed embedded fonts crashes on save
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: filter:pptx
Depends on:
Blocks: Fonts-Embedded
  Show dependency treegraph
 
Reported: 2025-06-25 18:39 UTC by Timur
Modified: 2025-06-27 09:14 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
PPTX (205.61 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-06-25 18:39 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-06-25 18:39:10 UTC
Created attachment 201474 [details]
PPTX

Open PPTX. Note it was supposed to save embedded fonts Figtree but it did not.
MSO gives warning that embedded fonts are not available, when not installed..
When saving, LO crashes. Also if fonts available. Seems it never worked. 
With fonts explanation, I put under meta bug 113338.
Comment 1 Commit Notification 2025-06-26 09:00:06 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c750db764108da6f94160df2f4a0a6768ffc3177

tdf#167214: fix crash on save on PPTX with failed embedded fonts

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Julien Nabet 2025-06-26 09:00:47 UTC
Cherry-pick for LO 25.8 here:
https://gerrit.libreoffice.org/c/core/+/187024
Comment 3 Commit Notification 2025-06-26 10:12:20 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/5780f21673be83c8d32857cccc36d37ef3d4edb5

tdf#167214: fix crash on save on PPTX with failed embedded fonts

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-06-27 09:14:17 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f55650046598d64eb559c48815d5a9ead4def499

tdf#167214: sd_font_embedding: Add test

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.