tdf#167214: fix crash on save on PPTX with failed embedded fonts

Change-Id: I80dd19161393284983e6f0018e35d0dfd22eefc0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187005
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit c750db764108da6f94160df2f4a0a6768ffc3177)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187024